Some general settings

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ long-description = file: README.md
 long-description-content-type = text/markdown; charset=UTF-8; variant=GFM
 url = https://github.com/se-jaeger/health-tracking
 project-urls =
-    Documentation = https://pyscaffold.org/
+    Documentation = https://github.com/se-jaeger/health-tracking
 # Change if running only on Windows, Mac or Linux (comma-separated)
 platforms = any
 # Add here all kinds of additional classifiers as defined under
@@ -35,6 +35,7 @@ setup_requires = pyscaffold>=3.2a0,<3.3a0
 # tests_require = pytest; pytest-cov
 # Require a specific Python version, e.g. Python 2.7 or >= 3.4
 # python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
+python_requires = >= 3.7
 
 [options.packages.find]
 where = src
@@ -114,6 +115,5 @@ package = health_tracking
 extensions =
     no_skeleton
     markdown
-    no_skeleton
     pre_commit
     dsproject
