Add conda env link

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 __pycache__/*
 .cache/*
 .*.swp
-*/.ipynb_checkpoints/*
+**/.ipynb_checkpoints/*
 .DS_Store
 
 # Project files
@@ -48,3 +48,5 @@ MANIFEST
 
 # Per-project virtualenvs
 .venv*/
+
+.linked_env
