--- a/environment.yaml
+++ b/environment.yaml
@@ -8,6 +8,7 @@ dependencies:
   - pip
   - pip:
      # add here only pip-packages that are not available in conda/conda-forge! E.g.:
+    - sphinx_rtd_theme
   # for development only (could also be kept in a separate environment file)
   - jupyterlab
   - pytest
