--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@
 
 [metadata]
 name = health-tracking
-description = Add a short description here!
+description = Parse Apple Health App dump conveniently and create visualizations.
 author = Sebastian Jäger
 author-email = message@sebastian-jaeger.me
 license = apache
@@ -36,6 +36,10 @@ setup_requires = pyscaffold>=3.2a0,<3.3a0
 # Require a specific Python version, e.g. Python 2.7 or >= 3.4
 # python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
 python_requires = >= 3.7
+install_requires =
+    pandas
+    matplotlib
+    seaborn
 
 [options.packages.find]
 where = src
