--- a/environment.yaml
+++ b/environment.yaml
@@ -6,6 +6,9 @@ channels:
 dependencies:
   - python>=3.7
   - pip
+  - pandas
+  - matplotlib
+  - seaborn
   - pip:
      # add here only pip-packages that are not available in conda/conda-forge! E.g.:
     - sphinx_rtd_theme
