--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ long-description = file: README.md
 long-description-content-type = text/markdown; charset=UTF-8; variant=GFM
 url = https://github.com/se-jaeger/health-tracking
 project-urls =
-    Documentation = https://github.com/se-jaeger/health-tracking
+    Documentation = https://health-tracking.readthedocs.io/en/latest/
 # Change if running only on Windows, Mac or Linux (comma-separated)
 platforms = any
 # Add here all kinds of additional classifiers as defined under
